added Bouncycastle library and documentation